# Feature 5 — favoritos persistidos localmente
appId: com.puciec.pokedexfinal
---
- launchApp
- scrollUntilVisible:
    element:
      id: "item-card-25"
    direction: DOWN
- tapOn:
    id: "item-card-25"
- assertVisible:
    id: "detail-screen"
- tapOn:
    id: "detail-favorite-button"
- tapOn:
    id: "detail-back-button"
- tapOn:
    id: "tab-favorites"
- assertVisible:
    id: "favorite-item-25"
